--- a/styles.css
+++ b/styles.css
@@ -829,8 +829,18 @@ textarea::placeholder {
 
   .modal a.see-project-btn {
     width: 40%;
-    margin-top: 2rem;
-    margin-left: 0;
+    margin-bottom: 24px;
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 1.1rem;
+    line-height: 1.5rem;
+    color: #396df2;
+    text-align: center;
+    letter-spacing: 0.03em;
+    background: #fff;
+    border: 1px solid #396df2;
+    padding: 0.5rem;
+    border-radius: 0.8rem;
   }
 
   .project-title {
@@ -1053,7 +1063,7 @@ textarea::placeholder {
 
   .visible {
     width: 80%;
-    height: 100vh;
+    height: 100%;
     margin: 12px auto 12px 10%;
     position: fixed;
     border: 1px solid #ebecf0;
@@ -1063,9 +1073,11 @@ textarea::placeholder {
     flex-direction: column;
     background-color: #fff;
     z-index: 100;
+    overflow-y: scroll;
   }
 
   .modal img.modalImage {
+    width: 100%;
     height: 50vw;
     object-fit: contain;
     margin: 0 auto;
@@ -1101,7 +1113,7 @@ textarea::placeholder {
     align-items: end;
     justify-content: flex-end;
     padding-right: 24px;
-    background-color: yellow;
+    margin-left: auto;
   }
 
   .modal .description-and-links {
@@ -1111,9 +1123,12 @@ textarea::placeholder {
   }
 
   .modal .btns {
+    width: 40%;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     gap: 12px;
+    margin-left: auto;
+    margin-right: 1rem;
   }
 
   .modal img.cancel-modal {
